# session-sidekick

./: .gitignore  LICENSE  README.md  pyproject.toml  state.md
.github/workflows/: test.yml
src/sidekick/: __main__.py  cli.py  daemon.py  db.py  embeddings.py  hooks.py  indexer.py  parser.py  paths.py  recall.py  search.py  titler.py
tests/: conftest.py  test_cli.py  test_daemon.py  test_db.py  test_e2e.py  test_embed_pending.py  test_embeddings.py  test_hooks.py  test_indexer.py  test_parser.py  test_project_boost.py  test_recall.py  test_search.py  test_smoke.py  test_titler.py
tests/fixtures/: abandoned.jsonl  completed.jsonl  context_limit.jsonl  make_afr_fixture.py
