[project]
name = "session-sidekick"
version = "0.1.0"
description = "Auto-title Claude Code sessions and inject per-prompt semantic matches"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "anthropic>=0.40",
  "fastembed>=0.4",
  "sqlite-vec>=0.1.6",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
sidekick = "sidekick.cli:main"
sidekick-daemon = "sidekick.daemon:main"
sidekick-recall = "sidekick.recall:main"
sidekick-titler = "sidekick.titler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sidekick"]
